--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,23 @@
 language: php
 
 addons:
-  postgresql: "9.6"
+  postgresql: "12"
+  apt:
+    packages:
+      - postgresql-12
+      - postgresql-client-12
 
 services:
   - docker
-  - postgresql
 
 cache:
   directories:
     - $HOME/.composer/cache
     - $HOME/.npm
-    - $HOME/.nvm
 
 env:
   global:
+    - PGVER=12
     - DB=pgsql
 
 matrix:
@@ -25,9 +28,14 @@ matrix:
       env: MOODLE_BRANCH=MOODLE_310_STABLE
     - php: 7.4
       env: MOODLE_BRANCH=MOODLE_311_STABLE
+    - php: 7.4
+      env: MOODLE_BRANCH=MOODLE_400_STABLE
+    - php: 8.0
+      env: MOODLE_BRANCH=MOODLE_401_STABLE
 
 before_install:
-  - phpenv config-rm xdebug.ini
+  - if [[ ${TRAVIS_PHP_VERSION:0:1} -gt 7 ]]; then pecl install xmlrpc-beta; fi
+  - echo 'max_input_vars=5000' >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini
   - cd ../..
   - composer create-project -n --no-dev --prefer-dist moodlehq/moodle-plugin-ci ci ^3
   - export PATH="$(cd ci/bin; pwd):$(cd ci/vendor/bin; pwd):$PATH"
@@ -38,5 +46,5 @@ install:
 script:
   - moodle-plugin-ci codechecker --max-warnings 0
   - moodle-plugin-ci grunt --max-lint-warnings 0
-  - moodle-plugin-ci phpunit --coverage-text
+  - moodle-plugin-ci phpunit --fail-on-warning --coverage-text
   - moodle-plugin-ci behat --profile chrome
