--- a/.github/workflows/moodle-ci.yml
+++ b/.github/workflows/moodle-ci.yml
@@ -30,6 +30,8 @@ jobs:
             moodle-branch: 'MOODLE_400_STABLE'
           - php: '8.0'
             moodle-branch: 'MOODLE_401_STABLE'
+          - php: '8.0'
+            moodle-branch: 'MOODLE_402_STABLE'
 
     steps:
       - name: Check out repository code
